# Requirements Update (requirements will need to be reinstalled)

# Removed Features

# New Features
Checks requirement versions to print a message if one needs to be updated

# Updates

# Defaults

# Bug Fixes

Various other Minor Fixes